# madmoun_pro_bot

./: .env.example  .gitignore  Dockerfile  Makefile  PROJECT_STATUS.md  README.md  SECURITY.md  alembic.ini  docker-compose.yml  owner_start.py  owner_start_v2.py  pyproject.toml  requirements.txt  start.py
.github/workflows/: build-jeeb-relay.yml
android-jeeb-relay/: settings.gradle
android-jeeb-relay/app/: build.gradle  proguard-rules.pro
app/: __init__.py  bootstrap.py  bot.py  cli.py  config.py  crypto.py  db.py  enums.py  formatting.py  keyboards.py  main.py  middleware.py  models.py  runtime.py  states.py
app/handlers/: admin.py  common.py  user.py
app/services/: __init__.py  audit.py  catalog.py  delivery.py  orders.py  referrals.py  supplier_catalog.py  users.py  wallet.py
app/web/: __init__.py  routes.py
docs/: ACTIVATION_CHECKLIST.md  ARCHITECTURE.md  JEEB_AUTO_CONFIRM_AR.md  JEEB_MACRODROID_AR.md  RAILWAY_DEPLOYMENT_AR.md
integrations/macrodroid/: Madhmoun_Jeeb_PlayStore_Relay.macro
migrations/: README  env.py
migrations/versions/: 658d899f626f_initial_schema.py  9b4d7a2e1f60_referral_program.py  a66220d5e82a_unique_manual_payment_reference.py  c13a9c6a1b72_supplier_catalog_sync.py  (+2 more)
tests/: conftest.py  test_app_startup.py  test_binance.py  test_bot_build.py  test_config.py  test_delivery.py  test_jeeb_macrodroid.py  test_jeeb_macrodroid_endpoint.py  test_jeeb_relay.py  test_orders.py  test_payments.py  test_provider.py  test_referrals.py  test_runtime.py  test_supplier_catalog.py  test_users.py  test_wallet.py
(+23 files in other folders)
