[project]
name = "digital-store-bot"
version = "0.2.0"
description = "Secure Arabic Telegram storefront for digital services"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.20,<4",
  "aiosqlite>=0.21,<1",
  "alembic>=1.15,<2",
  "asyncpg>=0.30,<1",
  "cryptography>=45,<47",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "pydantic-settings>=2.9,<3",
  "redis>=6,<7",
  "sqlalchemy>=2.0.40,<3",
  "uvicorn[standard]>=0.34,<1",
]

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.26,<1",
  "ruff>=0.11,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["B008"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
